@@ -1,176 +1,90 @@
 package com.openclassrooms.tourguide.service;
 
-import com.openclassrooms.tourguide.helper.InternalTestHelper;
-import com.openclassrooms.tourguide.tracker.Tracker;
-import com.openclassrooms.tourguide.model.User;
-import com.openclassrooms.tourguide.model.UserReward;
-
 import java.time.LocalDateTime;
 import java.time.ZoneOffset;
-import java.util.Comparator;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
-import java.util.Locale;
 import java.util.Map;
 import java.util.Random;
 import java.util.UUID;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.Executor;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
-import org.apache.commons.lang3.tuple.Pair;
-import org.apache.commons.lang3.tuple.Triple;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import lombok.Getter;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 
-import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
 
-import gpsUtil.GpsUtil;
-import gpsUtil.location.Attraction;
 import gpsUtil.location.Location;
 import gpsUtil.location.VisitedLocation;
 
-import tripPricer.Provider;
-import tripPricer.TripPricer;
+import com.openclassrooms.tourguide.tracker.Tracker;
+import com.openclassrooms.tourguide.model.User;
 
 @Service
+@Slf4j
+@RequiredArgsConstructor
 public class UserService {
-	private Logger logger = LoggerFactory.getLogger(UserService.class);
-	private final Executor threadPool;
-	private final GpsUtil gpsUtil;
-	private final RewardService rewardService;
-	private final TripPricer tripPricer = new TripPricer();
+
 	public final Tracker tracker;
-	boolean testMode = true;
 
-	public UserService(GpsUtil gpsUtil, RewardService rewardService, @Qualifier("fixedThreadPool") Executor threadPool) {
-		this.threadPool = threadPool;
-		this.gpsUtil = gpsUtil;
-		this.rewardService = rewardService;
-		
-		Locale.setDefault(Locale.US);
-
-		if (testMode) {
-			logger.info("TestMode enabled");
-			logger.debug("Initializing users");
-			initializeInternalUsers();
-			logger.debug("Finished initializing users");
-		}
-		tracker = new Tracker(this);
-		addShutDownHook();
-	}
-
-	public List<UserReward> getUserRewards(User user) {
-		return user.getUserRewards();
-	}
-
-	public VisitedLocation getUserLocation(User user) {
-		VisitedLocation visitedLocation = (user.getVisitedLocations().size() > 0) ? user.getLastVisitedLocation()
-				: trackUserLocationAsync(user).join();
-		return visitedLocation;
-	}
-
-	public User getUser(String userName) {
-		return internalUserMap.get(userName);
+	public User getUser(String username) {
+		return internalUserMap.get(username);
 	}
 
 	public List<User> getAllUsers() {
-		return internalUserMap.values().stream().collect(Collectors.toList());
+		return internalUserMap.values().stream().toList();
 	}
 
 	public void addUser(User user) {
-		if (!internalUserMap.containsKey(user.getUserName())) {
-			internalUserMap.put(user.getUserName(), user);
-		}
+		internalUserMap.putIfAbsent(user.getUsername(), user);
 	}
 
-	public List<Provider> getTripDeals(User user) {
-		int cumulatativeRewardPoints = user.getUserRewards().stream().mapToInt(i -> i.getRewardPoints()).sum();
-		List<Provider> providers = tripPricer.getPrice(tripPricerApiKey, user.getUserId(),
-				user.getUserPreferences().getNumberOfAdults(), user.getUserPreferences().getNumberOfChildren(),
-				user.getUserPreferences().getTripDuration(), cumulatativeRewardPoints);
-		user.setTripDeals(providers);
-		return providers;
-	}
+	/* **************************************** */
+	/*  Methods below are for internal testing  */
+	/* **************************************** */
+	// Database connection will be used for external users,
+	// but internal users are provided and stored in memory
+	// for testing purposes.
+	@Getter
+	public boolean testMode = false;
+	@Getter
+	private int internalUserNumber = 0; // up to 100,000 users for testing
 
-	public CompletableFuture<VisitedLocation> trackUserLocationAsync(User user) {
-		return CompletableFuture.supplyAsync(() -> gpsUtil.getUserLocation(user.getUserId()), threadPool)
-				.thenCompose(visitedLocation -> {
-					user.addToVisitedLocations(visitedLocation);
-					return rewardService.calculateRewardsAsync(user).thenApply(unused -> visitedLocation);
-				});
-	}
-
-	/**
-	 * Retrieves the 5 closest attractions to the specified location, sorted by distance.
-	 *
-	 * @param visitedLocation the user's location
-	 * @return a list of the 5 nearest attractions
-	 */
-	public List<Attraction> getNearByAttractions(VisitedLocation visitedLocation) {
-		return rewardService.getAttractions().stream()
-				.map(attraction -> Pair.of(attraction, rewardService.getDistance(attraction, visitedLocation.location)))
-				.sorted(Comparator.comparingDouble(Pair::getValue))
-				.limit(5)
-				.map(Pair::getKey)
-				.toList();
-	}
-
-	/**
-	 * Retrieves the 5 closest attractions to the specified location, sorted by distance.
-	 *
-	 * TODO: Need refactor for cleaner architecture.
-	 *
-	 * @param visitedLocation the user's location
-	 * @return a list of the 5 nearest attractions
-	 */
-	public List<Triple<Attraction, Double, Integer>> getNearByAttractionsWithDistanceAndReward(VisitedLocation visitedLocation) {
-		return rewardService.getAttractions().stream()
-				.map(attraction -> Triple.of(attraction,
-								rewardService.getDistance(attraction, visitedLocation.location),
-								rewardService.getRewardPoints(attraction, visitedLocation.userId)))
-				.sorted(Comparator.comparingDouble(Triple::getMiddle))
-				.limit(5)
-				.toList();
-	}
-
-	private void addShutDownHook() {
-		Runtime.getRuntime().addShutdownHook(new Thread() {
-			public void run() {
-				tracker.stopTracking();
-			}
-		});
-	}
-
-	/**********************************************************************************
-	 * 
-	 * Methods Below: For Internal Testing
-	 * 
-	 **********************************************************************************/
-	private static final String tripPricerApiKey = "test-server-api-key";
-	// Database connection will be used for external users, but for testing purposes
-	// internal users are provided and stored in memory
 	private final Map<String, User> internalUserMap = new HashMap<>();
 
+	public void setInternalUserNumber(int internalUserNumber) {
+		testMode = true;
+		this.internalUserNumber = internalUserNumber;
+
+		log.info("TestMode enabled");
+		log.debug("Initializing users");
+		initializeInternalUsers();
+		log.debug("Finished initializing users");
+
+		Runtime.getRuntime().addShutdownHook(new Thread(tracker::stopTracking));
+	}
+
 	private void initializeInternalUsers() {
-		IntStream.range(0, InternalTestHelper.getInternalUserNumber()).forEach(i -> {
-			String userName = "internalUser" + i;
-			String phone = "000";
-			String email = userName + "@tourGuide.com";
-			User user = new User(UUID.randomUUID(), userName, phone, email);
+		internalUserMap.clear();
+
+		IntStream.range(0, internalUserNumber).forEach(i -> {
+			var username = "internalUser" + i;
+			var phone = "000";
+			var email = username + "@tourGuide.com";
+			var user = new User(UUID.randomUUID(), username, phone, email);
 			generateUserLocationHistory(user);
 
-			internalUserMap.put(userName, user);
+			internalUserMap.put(username, user);
 		});
-		logger.debug("Created " + InternalTestHelper.getInternalUserNumber() + " internal test users.");
+
+		log.debug("Created {} internal test users.", internalUserNumber);
 	}
 
 	private void generateUserLocationHistory(User user) {
 		IntStream.range(0, 3).forEach(i -> {
-			user.addToVisitedLocations(new VisitedLocation(user.getUserId(),
+			user.addToVisitedLocations(new VisitedLocation(user.getId(),
 					new Location(generateRandomLatitude(), generateRandomLongitude()), getRandomTime()));
 		});
 	}
@@ -188,8 +102,9 @@ public class UserService {
 	}
 
 	private Date getRandomTime() {
-		LocalDateTime localDateTime = LocalDateTime.now().minusDays(new Random().nextInt(30));
+		var localDateTime = LocalDateTime.now().minusDays(new Random().nextInt(30));
 		return Date.from(localDateTime.toInstant(ZoneOffset.UTC));
 	}
 
 }
+
